deploy/timecard/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timecard
  labels:
    app: timecard
