deploy/timecard/base/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: timecard
  namespace: timecard
  labels:
    app: timecard
spec:
  containers:
  - name: app
    imagePullPolicy: IfNotPresent
    image: docker.io/library/timecard:0.4.0
    args:
      - --log
    ports:
    - name: http
      containerPort: 8080
    livenessProbe:
      httpGet:
        path: /timecard/healthz
        port: http
      initialDelaySeconds: 5
      failureThreshold: 10
      periodSeconds: 60
    startupProbe:
      httpGet:
        path: /timecard/readyz
        port: http
      initialDelaySeconds: 5
      failureThreshold: 60
      periodSeconds: 2
    resources:
      limits:
        memory: 128Mi
        cpu: 200m
      requests:
        memory: 64Mi
        cpu: 100m
