deploy/timecard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timecard
  namespace: timecard
  labels:
    app: timecard
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /timecard
            pathType: Prefix
            backend:
              service:
                name: timecard
                port:
                  number: 8080
